CICO-6100 button alignment style fix

--- a/stylesheets/less/app/05-A_components.less
+++ b/stylesheets/less/app/05-A_components.less
@@ -5069,7 +5069,11 @@
                     }
                 }
 
-                .add-new-button { padding: 0 40px; }
+                .add-new-button { 
+                    padding: 0 40px; 
+                    height: 60px;
+                    .pull-left;
+                }
 
                 .button {
                     margin: 10px;
